applications/monitoring/collector-and-ilo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ilo-collector
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: opentelemetrycollector
  template:
    metadata:
      labels:
        app.kubernetes.io/name: opentelemetrycollector
    spec:
      containers:
      - name: otelcol
        args:
        - --config=/conf/collector.yaml
        image: otel/opentelemetry-collector-contrib:0.138.0
        volumeMounts:
        - mountPath: /conf
          name: ilo-collector-config
      volumes:
      - configMap:
          items:
          - key: collector.yaml
            path: collector.yaml
          name: ilo-collector-config
        name: ilo-collector-config

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ilo-prometheus
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ilo-prometheus
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ilo-prometheus
    spec:
      containers:
      - name: otelcol
        image: mauvesoftware/ilo_exporter:latest
---
apiVersion: v1
kind: Service
metadata:
  name: ilo-prometheus
  namespace: monitoring
spec:
  ports:
  - name: http
    port: 9545
    protocol: TCP
    targetPort: 9545
  selector:
    app.kubernetes.io/name: ilo-prometheus
  type: ClusterIP
